# advent_of_code

2020/: Cargo.toml
2020/src/: day1.rs
2023/: Cargo.toml
2023/src/: main.rs
2023/src/day01/: bin.rs
2023/src/day02/: bin.rs
2023/src/day03/: bin.rs
2023/src/day04/: bin.rs
2023/src/day05/: bin.rs
2023/src/day06/: bin.rs
2023/src/day07/: bin-p1.rs  bin.rs
2023/src/day08/: bin.rs
2023/src/day09/: bin.rs
2023/src/day10/: bin.rs
2023/src/day11/: bin.rs
2023/src/day12/: bin.rs
2023/src/day13/: bin.rs
2023/src/day14/: bin.rs
2023/src/day15/: bin.rs
2023/src/day16/: bin.rs
2023/src/day17/: bin.rs
2023/src/day21/: bin.rs
2023/src/day24/: bin.rs
2024/: Cargo.toml
2024/src/: grid.rs
2024/src/day01/: bin.rs
2024/src/day02/: bin.rs
2024/src/day03/: bin.rs
2024/src/day04/: bin.rs
2024/src/day05/: bin.rs
2024/src/day06/: bin.rs
2024/src/day07/: bin.rs
2024/src/day08/: bin.rs
2024/src/day09/: bin.rs
2024/src/day10/: bin.rs
2024/src/day11/: bin.rs
2024/src/day12/: bin.rs
2024/src/day13/: bin.rs
2024/src/day14/: bin.rs
2024/src/day15/: bin.rs
2025/: Cargo.toml
2025/src/: main.rs
2025/src/day01/: bin.rs
2025/src/day02/: bin.rs
2025/src/day03/: bin.rs
2025/src/day04/: bin.rs
2025/src/day05/: bin.rs
