[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"

[[bin]]
name = "day01"
path = "src/day01/bin.rs"

[[bin]]
name = "day02"
path = "src/day02/bin.rs"

[[bin]]
name = "day03"
path = "src/day03/bin.rs"
