[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"

[[bin]]
name = "day01"
path = "src/day01/bin.rs"

[[bin]]
name = "day02"
path = "src/day02/bin.rs"

[[bin]]
name = "day03"
path = "src/day03/bin.rs"

[[bin]]
name = "day04"
path = "src/day04/bin.rs"

[[bin]]
name = "day05"
path = "src/day05/bin.rs"

[[bin]]
name = "day06"
path = "src/day06/bin.rs"

[[bin]]
name = "day07"
path = "src/day07/bin.rs"

[[bin]]
name = "day08"
path = "src/day08/bin.rs"

[[bin]]
name = "day09"
path = "src/day09/bin.rs"

[[bin]]
name = "day10"
path = "src/day10/bin.rs"

[[bin]]
name = "day11"
path = "src/day11/bin.rs"

[[bin]]
name = "day12"
path = "src/day12/bin.rs"

[[bin]]
name = "day13"
path = "src/day13/bin.rs"
