[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
itertools = "0.14.0"

[[bin]]
name = "day01"
path = "src/day01/bin.rs"

[[bin]]
name = "day02"
path = "src/day02/bin.rs"

[[bin]]
name = "day03"
path = "src/day03/bin.rs"

[[bin]]
name = "day04"
path = "src/day04/bin.rs"
